--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -21,18 +21,18 @@
   --bs-pink: #F8A2FF;
   --bs-red: #FF705C;
   --bs-orange: #FE7A15;
-  --bs-yellow: #FFA15C;
+  --bs-yellow: #7dffc4;
   --bs-green: #19CC61;
   --bs-teal: #00D9B0;
   --bs-cyan: #00A1FC;
   --bs-white: #FFFEFE;
   --bs-gray: #9E9E9E;
   --bs-gray-dark: #616161;
-  --bs-primary: #FFA15C;
+  --bs-primary: #7dffc4;
   --bs-secondary: #FE7A15;
   --bs-success: #19CC61;
   --bs-info: #00A1FC;
-  --bs-warning: #FFA15C;
+  --bs-warning: #7dffc4;
   --bs-danger: #FF705C;
   --bs-light: #F9FAFD;
   --bs-dark: #212121;
@@ -2876,8 +2876,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2889,8 +2889,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23FFFEFE' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2986,7 +2986,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #FFA15C;
+  background-color: #7dffc4;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3021,7 +3021,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #FFA15C;
+  background-color: #7dffc4;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3515,8 +3515,8 @@ fieldset:disabled .btn {
 
 .btn-primary {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-primary:hover {
@@ -3550,8 +3550,8 @@ fieldset:disabled .btn {
 
 .btn-primary:disabled, .btn-primary.disabled {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-secondary {
@@ -3679,8 +3679,8 @@ fieldset:disabled .btn {
 
 .btn-warning {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-warning:hover {
@@ -3714,8 +3714,8 @@ fieldset:disabled .btn {
 
 .btn-warning:disabled, .btn-warning.disabled {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-danger {
@@ -3842,14 +3842,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #FFA15C;
-  border-color: #FFA15C;
+  color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-outline-primary:hover {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
@@ -3860,8 +3860,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-primary,
 .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-check:checked + .btn-outline-primary:focus,
@@ -3871,7 +3871,7 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #FFA15C;
+  color: #7dffc4;
   background-color: transparent;
 }
 
@@ -3978,14 +3978,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-warning {
-  color: #FFA15C;
-  border-color: #FFA15C;
+  color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-outline-warning:hover {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-check:focus + .btn-outline-warning, .btn-outline-warning:focus {
@@ -3996,8 +3996,8 @@ fieldset:disabled .btn {
 .btn-check:checked + .btn-outline-warning,
 .btn-check:active + .btn-outline-warning, .btn-outline-warning:active, .btn-outline-warning.active, .btn-outline-warning.dropdown-toggle.show {
   color: #616161;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .btn-check:checked + .btn-outline-warning:focus,
@@ -4007,7 +4007,7 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-warning:disabled, .btn-outline-warning.disabled {
-  color: #FFA15C;
+  color: #7dffc4;
   background-color: transparent;
 }
 
@@ -4448,7 +4448,7 @@ fieldset:disabled .btn {
 .dropdown-item.active, .dropdown-item:active {
   color: #FFFEFE;
   text-decoration: none;
-  background-color: #FFA15C;
+  background-color: #7dffc4;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -4493,7 +4493,7 @@ fieldset:disabled .btn {
 
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #FFFEFE;
-  background-color: #FFA15C;
+  background-color: #7dffc4;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
@@ -5462,8 +5462,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
   z-index: 3;
   color: #FFFEFE;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .page-item.disabled .page-link {
@@ -5685,7 +5685,7 @@ fieldset:disabled .btn {
   color: #FFFEFE;
   text-align: center;
   white-space: nowrap;
-  background-color: #FFA15C;
+  background-color: #7dffc4;
   -webkit-transition: width 0.6s ease;
   -o-transition: width 0.6s ease;
   transition: width 0.6s ease;
@@ -5786,8 +5786,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
   z-index: 2;
   color: #FFFEFE;
-  background-color: #FFA15C;
-  border-color: #FFA15C;
+  background-color: #7dffc4;
+  border-color: #7dffc4;
 }
 
 .list-group-item + .list-group-item {
@@ -7014,7 +7014,7 @@ fieldset:disabled .btn {
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #FFA15C;
+  background-color: #7dffc4;
   background-clip: padding-box;
   border: 0;
   border-top: 0 solid transparent;
@@ -7297,7 +7297,7 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #FFA15C;
+  color: #7dffc4;
 }
 
 .link-primary:hover, .link-primary:focus {
@@ -7329,7 +7329,7 @@ fieldset:disabled .btn {
 }
 
 .link-warning {
-  color: #FFA15C;
+  color: #7dffc4;
 }
 
 .link-warning:hover, .link-warning:focus {
@@ -7809,7 +7809,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #FFA15C !important;
+  border-color: #7dffc4 !important;
 }
 
 .border-secondary {
@@ -7825,7 +7825,7 @@ fieldset:disabled .btn {
 }
 
 .border-warning {
-  border-color: #FFA15C !important;
+  border-color: #7dffc4 !important;
 }
 
 .border-danger {
@@ -9492,7 +9492,7 @@ fieldset:disabled .btn {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #FFA15C !important;
+  color: #7dffc4 !important;
 }
 
 .text-secondary {
@@ -9508,7 +9508,7 @@ fieldset:disabled .btn {
 }
 
 .text-warning {
-  color: #FFA15C !important;
+  color: #7dffc4 !important;
 }
 
 .text-danger {
@@ -9620,7 +9620,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #FFA15C !important;
+  background-color: #7dffc4 !important;
 }
 
 .bg-secondary {
@@ -9636,7 +9636,7 @@ fieldset:disabled .btn {
 }
 
 .bg-warning {
-  background-color: #FFA15C !important;
+  background-color: #7dffc4 !important;
 }
 
 .bg-danger {
@@ -17780,8 +17780,8 @@ ul {
 }
 
 .circle-warning:before {
-  -webkit-box-shadow: 7.5rem 0 48.75rem 4.0625rem #FFA15C;
-  box-shadow: 7.5rem 0 48.75rem 4.0625rem #FFA15C;
+  -webkit-box-shadow: 7.5rem 0 48.75rem 4.0625rem #7dffc4;
+  box-shadow: 7.5rem 0 48.75rem 4.0625rem #7dffc4;
 }
 
 .circle-cyan:before {
@@ -17790,8 +17790,8 @@ ul {
 }
 
 .circle-primary:before {
-  -webkit-box-shadow: 0 0 18.75rem 6.25rem #FFA15C;
-  box-shadow: 0 0 18.75rem 6.25rem #FFA15C;
+  -webkit-box-shadow: 0 0 18.75rem 6.25rem #7dffc4;
+  box-shadow: 0 0 18.75rem 6.25rem #7dffc4;
 }
 
 .circle-pink:before {
@@ -18040,7 +18040,7 @@ ul {
 |   Custom circle
 -----------------------------------------------*/
 .circle-dashed {
-  border: 1px dashed #FFA15C;
+  border: 1px dashed #7dffc4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -18163,7 +18163,7 @@ ul {
 }
 
 .terms-sidebar .nav-link.active {
-  color: #FFA15C;
+  color: #7dffc4;
 }
 
 .icon {
@@ -18179,7 +18179,7 @@ ul {
 }
 
 .icon-primary {
-  color: #FFA15C;
+  color: #7dffc4;
 }
 
 .icon-secondary {
@@ -18195,7 +18195,7 @@ ul {
 }
 
 .icon-warning {
-  color: #FFA15C;
+  color: #7dffc4;
 }
 
 .icon-danger {
@@ -18237,8 +18237,8 @@ ul {
 }
 
 .btn-gradient:hover {
-  -webkit-box-shadow: 0 10px 20px #F8A2FF, 0 6px 6px #FFA15C;
-  box-shadow: 0 10px 20px #F8A2FF, 0 6px 6px #FFA15C;
+  -webkit-box-shadow: 0 10px 20px #F8A2FF, 0 6px 6px #7dffc4;
+  box-shadow: 0 10px 20px #F8A2FF, 0 6px 6px #7dffc4;
 }
 
 .btn-theme-outline {
@@ -18255,8 +18255,8 @@ ul {
   bottom: 0;
   background-image: inherit;
   background-size: auto;
-  background: -o-linear-gradient(40deg, #FFA15C, #FFA15C);
-  background: linear-gradient(50deg, #FFA15C, #FFA15C);
+  background: -o-linear-gradient(40deg, #7dffc4, #7dffc4);
+  background: linear-gradient(50deg, #7dffc4, #7dffc4);
   -webkit-mask: url('data:image/svg+xml;utf8,<svg  xmlns="http://www.w3.org/2000/svg" ><rect x="1" y="1" width="100%" height="100%" style="height:calc(100% - 2px);width:calc(100% - 2px)" rx="6" ry="6" stroke-width="1" fill="transparent" stroke="white"/></svg>') 0/100% 100%;
   mask: url('data:image/svg+xml;utf8,<svg  xmlns="http://www.w3.org/2000/svg" ><rect x="1" y="1" width="100%" height="100%" style="height:calc(100% - 2px);width:calc(100% - 2px)" rx="6" ry="6" stroke-width="1" fill="transparent" stroke="white"/></svg>') 0/100% 100%;
 }
