--- a/dashBoard/Css.css
+++ b/dashBoard/Css.css
@@ -42,7 +42,7 @@ body {
 
 .table th {
     text-align: center;
-    background-color: #007bff; 
+    background-color: #705C53; 
     color: white; 
 }
 
